<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.vzotov</groupId>
    <artifactId>banking-model</artifactId>
    <version>2.0</version>
    <name>[Model] Banking</name>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <junit.version>5.9.2</junit.version>
        <assertj.version>3.24.2</assertj.version>
        <commons-lang.version>3.12.0</commons-lang.version>
        <nv-i18n.version>1.29</nv-i18n.version>
        <jacoco.version>0.8.10</jacoco.version>
        <!-- Own modules -->
        <ddd.version>1.4</ddd.version>
        <money.version>2.0</money.version>
        <gov.model.version>2.0</gov.model.version>
        <person.model.version>2.0</person.model.version>
    </properties>

    <dependencies>
        <!--
        Internal modules
        -->
        <dependency>
            <groupId>ru.vzotov</groupId>
            <artifactId>ddd-shared</artifactId>
            <version>${ddd.version}</version>
        </dependency>

        <dependency>
            <groupId>ru.vzotov</groupId>
            <artifactId>gov-model</artifactId>
            <version>${gov.model.version}</version>
        </dependency>

        <dependency>
            <groupId>ru.vzotov</groupId>
            <artifactId>money-model</artifactId>
            <version>${money.version}</version>
        </dependency>

        <dependency>
            <groupId>ru.vzotov</groupId>
            <artifactId>person-model</artifactId>
            <version>${person.model.version}</version>
        </dependency>

        <!-- Commons -->
        <dependency>
            <!-- Package to support internationalization, containing ISO 3166-1 country code enum,
            ISO 639-1 language code enum, ISO 15924 script code enum, etc. -->
            <groupId>com.neovisionaries</groupId>
            <artifactId>nv-i18n</artifactId>
            <version>${nv-i18n.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang.version}</version>
            </dependency>

            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- Code Coverage report generation -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>generate-code-coverage-report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Git flow support -->
            <plugin>
                <groupId>com.amashchenko.maven.plugin</groupId>
                <artifactId>gitflow-maven-plugin</artifactId>
                <version>1.20.0</version>
                <configuration>
                    <gitFlowConfig>
                        <productionBranch>main</productionBranch>
                        <developmentBranch>main</developmentBranch>
                    </gitFlowConfig>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>vzotov-releases</id>
            <url>https://maven.vzotov.ru/repository/maven-everyone</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>vzotov-releases</id>
            <url>https://maven.vzotov.ru/repository/maven-everyone</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

</project>
